; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_merge.c_git_merge_base.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_merge.c_git_merge_base.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_merge_base(i32* %0, i32* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca %struct.TYPE_6__*, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = load i32*, i32** %8, align 8
  %15 = load i32*, i32** %9, align 8
  %16 = call i32 @merge_bases(%struct.TYPE_6__** %12, i32** %11, i32* %13, i32* %14, i32* %15)
  store i32 %16, i32* %10, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %4
  %19 = load i32, i32* %10, align 4
  store i32 %19, i32* %5, align 4
  br label %30

20:                                               ; preds = %4
  %21 = load i32*, i32** %6, align 8
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 0
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %24, i32 0, i32 0
  %26 = call i32 @git_oid_cpy(i32* %21, i32* %25)
  %27 = call i32 @git_commit_list_free(%struct.TYPE_6__** %12)
  %28 = load i32*, i32** %11, align 8
  %29 = call i32 @git_revwalk_free(i32* %28)
  store i32 0, i32* %5, align 4
  br label %30

30:                                               ; preds = %20, %18
  %31 = load i32, i32* %5, align 4
  ret i32 %31
}

declare dso_local i32 @merge_bases(%struct.TYPE_6__**, i32**, i32*, i32*, i32*) #1

declare dso_local i32 @git_oid_cpy(i32*, i32*) #1

declare dso_local i32 @git_commit_list_free(%struct.TYPE_6__**) #1

declare dso_local i32 @git_revwalk_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
